# granola-mcp-server

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  GRANOLA_MCP_COMPLETE_GUIDE.md  IMPROVEMENT_PLAN.md  PROJECT_COMPARISON.md  SESSION_SUMMARY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: API_REFERENCE.md  INDEX.md  MCP_GUIDE.md
docs/reports/: CLEANUP_REPORT.md  TEST_REPORT.md
src/granola_mcp_server/: server.py
src/granola_mcp_server/sources/: adapter.py  remote_api.py
tests/: test_parser.py  test_tools.py
