[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "granola-mcp-server"
version = "0.1.0"
description = "Local-first, read-only MCP server exposing Granola meetings via tools"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Mohamed Sharif" }
]
keywords = ["MCP", "Model Context Protocol", "Granola", "meetings", "local-first"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.7,<3.0",
  "typing-extensions>=4.7",
]

[project.optional-dependencies]
mcp = [
  "fastmcp>=2.13.0; python_version>='3.10'",
  "mcp>=1.17.0; python_version>='3.10'",
]
dev = [
  # Testing
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-mock>=3.12.0",
  "pytest-benchmark>=4.0.0",
  "coverage[toml]>=7.3.0",

  # Code formatting
  "black>=24.0.0",
  "isort>=5.12.0",

  # Linting
  "ruff>=0.1.0",
  "mypy>=1.8.0",
  "bandit>=1.7.0",

  # Pre-commit
  "pre-commit>=3.5.0",

  # Documentation
  "sphinx>=7.2.0",
  "sphinx-rtd-theme>=2.0.0",
  "sphinx-autodoc-typehints>=1.25.0",
]
all = [
  "granola-mcp-server[mcp,dev]",
]

[project.scripts]
granola-mcp = "granola_mcp_server.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "**/__pycache__/*",
    "**/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
precision = 2
show_missing = true

[tool.ruff]
line-length = 88
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "N",  # pep8-naming
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"tests/*" = ["D", "S101"]  # Allow missing docstrings and asserts in tests

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start permissive, tighten later
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.bandit]
exclude_dirs = ["tests", "test_*.py"]
skips = ["B101", "B601"]


